Update Application for Daughter Date.html

--- a/Application for Daughter Date.html
+++ b/Application for Daughter Date.html
@@ -59,7 +59,7 @@
                 <br>
                 <fieldset class="/2">
                     <p>Check All That Apply</p>
-                    <label for="tats"><input type="checkbox" id="tats" name="about">I have tattoos and/or piercings 🙊</label><br>
+                    <label for="tats"><input type="checkbox" id="tats" name="about">I have tattoos and/or piercings</label><br>
                     <label for="dob"><input type="checkbox" id="dob" name="about">I am 2 or more years older than your daughter</label><br>
                     <label for="car"><input type="checkbox" id="car" name="about">I own a panel van or V8 ute</label><br>
                     <label for="work"><input type="checkbox" id="work" name="about">I work full-time</label><br>
